--- a/index.html
+++ b/index.html
@@ -1,10 +1,135 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My GitHub Page</title>
+    <meta name="description" content="Funny ghost scares, ghost scare memes, ghost scare troll games, ghost scare video clips, and many interesting things about the world of ghost scares!">
+    <meta name="keywords" content="ghost scare, ghost scare game, ghost scare meme, ghost scare video, ghost scare clip, ghost scare troll, ghost scare website, ghost scare link, ghost scare game">
+    <meta name="author" content="Ghost Scare Team">
+    <meta property="og:description" content="I_WILL_LIKE_IT">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Screenshot">
+    <meta property="og:site_name" content="I_WILL_LIKE_IT">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BELIEVE ME, EVERYONE WILL END UP LIKING ME.</title>
+    <style>
+        /* General styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        /* Container for the main content */
+        .content {
+            max-width: 800px;
+            width: 100%;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin: 20px;
+        }
+
+        hr {
+            border: 1px solid #ccc;
+            width: 100%;
+            max-width: 700px;
+            margin: 20px 0;
+        }
+
+        /* Warning section */
+        .warning {
+            color: #d9534f;
+            font-weight: bold;
+            margin: 15px 0;
+        }
+
+        /* Links section */
+        .links {
+            margin: 20px 0;
+        }
+
+        .links a {
+            display: inline-block;
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+            padding: 10px 20px;
+            margin: 10px;
+            border: 2px solid #007bff;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        .links a:hover {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        /* Footer section */
+        .footer {
+            margin-top: 30px;
+            font-size: 1.1em;
+        }
+
+        .footer a {
+            color: #d9534f;
+            text-decoration: underline;
+        }
+
+        /* Responsive styling */
+        @media (max-width: 600px) {
+            .content {
+                padding: 15px;
+            }
+            .links a {
+                padding: 8px 15px;
+                margin: 5px;
+                font-size: 0.9em;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is my personal website hosted on GitHub Pages.</p>
+    <div class="content">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '54b68a905c7750b659e2885f404ecc36',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script>
+        <h1>BELIEVE ME, EVERYONE WILL END UP LIKING ME.</h1>
+        <hr>
+
+        <p class="warning">I WANT TO REMIND YOU</p>
+        <p>Please note that this content is not suitable for the elderly, those with a weak heart, underlying medical conditions, or unstable mental health!</p>
+        
+        <div class="links">
+            <a href="https://australiavd.github.io/ready" target="_blank">Open</a>
+            <a href="https://australiavd.github.io/ready" target="_blank">Can't Resist the Curiosity</a>
+        </div>
+        
+        <div>
+            <p>YOU LIKE THIS VIDEO?</p>
+        </div>
+
+        <hr>
+
+        <div class="footer">
+            <p>Share this website with your friends: <a href="https://australiavd.github.io/" target="_blank">https://australiavd.github.io/</a></p>
+        </div>
+    </div>
+    <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
+    <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div>
 </body>
 </html>
