--- a/ready.html
+++ b/ready.html
@@ -5,29 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELLO</title>
     <style>
-        /* General styling */
-        body {
-            font-family: Arial, sans-serif;
+        /* Remove all margins and padding from html and body */
+        html, body {
             margin: 0;
             padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
             background-color: #f0f8ff;
             color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
             text-align: center;
+            overflow-y: scroll; /* Enables vertical scrollbar */
         }
 
-        /* Content container */
-        .content {
-            max-width: 800px;
+        .top, .bottom {
+            width: 100%;
+            padding: 10px;
+            background-color: #e8f4f8;
+        }
+
+        .top {
+            border-bottom: 1px solid #ccc;
+        }
+
+        .bottom {
+            display: flex;
+            justify-content: space-between; /* This arranges the child divs horizontally */
+            width: 100%;
+            padding: 10px;
+            margin-top: 20px;
+        }
+
+        .bottom .left, .bottom .right {
+            width: 48%; /* Adjust width of each side */
+            padding: 10px;
+            background-color: #e8f4f8;
+            text-align: center;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+        }
+
+        /* Container for ads and countdown content in a row */
+        .row {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            gap: 20px; /* Adds space between the two columns */
+            margin: 20px 0;
+        }
+
+        .ads, .content {
             padding: 20px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            margin: 20px;
+        }
+
+        .ads {
+            width: 160px;
+            text-align: center;
+        }
+
+        .content {
+            max-width: 600px;
+            text-align: center;
         }
 
         h1 {
@@ -35,21 +76,13 @@
             color: #333;
         }
 
-        .warning {
-            color: #d9534f;
-            font-weight: bold;
-            margin: 15px 0;
-        }
-
-        /* Countdown styling */
         .countdown {
             font-size: 2em;
             font-weight: bold;
             color: #d9534f;
-            margin: 20px 0;
         }
 
-        /* Hidden video styling */
+        /* Fullscreen video styling */
         #fullscreenVideo {
             display: none;
             position: fixed;
@@ -59,57 +92,65 @@
             height: 100%;
             background-color: black;
             z-index: 1000;
+            object-fit: cover; /* Makes video cover the screen fully */
         }
     </style>
 </head>
-<body>    <div style="margin-top:800px">
-    <h1>I WILL LIKE IT</h1>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '54b68a905c7750b659e2885f404ecc36',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script> </div>
-<div class="content">
-<h1>I WILL LIKE IT</h1>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '54b68a905c7750b659e2885f404ecc36',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script> </div>
-    <div class="content">
-        <hr>
-        <div class="countdown">I'll give you <span id="timer">5</span> more seconds to prepare!</div>
-        <hr>
+<body>
+    <!-- Top div with "Trên" -->
+    <div class="top"><h1>YOU WILL LIKE IT</h1>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '54b68a905c7750b659e2885f404ecc36',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script></div>
+
+    <!-- Row container for ads and countdown content -->
+    <div class="row">
+        <div class="ads">  
+            <h1>ads</h1>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '2a6fea9f095fbace44311f3473a8acdc',
+                    'format' : 'iframe',
+                    'height' : 300,
+                    'width' : 160,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//slushhelmetmirth.com/2a6fea9f095fbace44311f3473a8acdc/invoke.js"></script> 
+        </div>
         
- </div>
- <div  style="height:100px;width:150px;">
-    <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
-    <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div>
-</div>  
-    <div class="content" style="margin-top: 600px;">
-        <h1>ads</h1>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '2a6fea9f095fbace44311f3473a8acdc',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//slushhelmetmirth.com/2a6fea9f095fbace44311f3473a8acdc/invoke.js"></script>  </div>
-    <!-- Video element to play in fullscreen after countdown -->
-    <video id="fullscreenVideo" src="video.mp4" controls></video>
+        <div class="content">
+            <div class="countdown">I'll give you <span id="timer">5</span> more seconds to prepare!</div>
+        </div>
+    </div>
+
+    <!-- Bottom div with "Dưới", divided into two side-by-side sections -->
+    <div class="bottom">
+        <div class="left"> <div  style="height:100px;width:150px;">
+            <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
+            <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div>
+        </div>  </div>
+        <div class="right"><script type="text/javascript">
+            atOptions = {
+                'key' : '886228820cccfbf9b312bd48fb0ef7f2',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//slushhelmetmirth.com/886228820cccfbf9b312bd48fb0ef7f2/invoke.js"></script> <h1>ads</h1></div>
+    </div>
+
+    <!-- Fullscreen video that starts playing after countdown -->
+    <video id="fullscreenVideo" src="video.mp4" muted></video>
 
     <script>
         // Countdown timer (5 seconds)
@@ -120,7 +161,6 @@
             countdown -= 1;
             timerElement.textContent = countdown;
 
-            // When countdown reaches 0, stop interval and play video in fullscreen
             if (countdown === 0) {
                 clearInterval(interval);
                 
@@ -138,7 +178,7 @@
                     video.msRequestFullscreen();
                 }
             }
-        }, 3000); // Update every second
+        }, 3500); // Countdown every second
     </script>
 </body>
 </html>
