--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
         
         <div class="content">
             <div class="countdown">    
-                <button class="button" >LIST JUMPSCARE</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">jumpscare 1</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">jumpscare 2</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">jumpscare 3</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">jumpscare 4</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">jumpscare 5</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">jumpscare 6</button>
+                <button class="button" >LIST JUMPSCARE VIDEOS</button>
+                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (1)</button>
+                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (2)</button>
+                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (3)</button>
+                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (4)</button>
+                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (5)</button>
+                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (6)</button>
             </div>
         </div>
         
