--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
             <div class="countdown">    
                 <button class="button" >LIST JUMPSCARE VIDEOS</button>
                 <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (1)</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (2)</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (3)</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (4)</button>
+                <button class="button" onclick="window.location.href='https://tophorrortales.blogspot.com/'">Jumpscare Videos (2)</button>
+                <button class="button" onclick="window.location.href='https://vietnamvd.github.io/sad'">Jumpscare Videos (3)</button>
+                <button class="button" onclick="window.location.href='https://thatnghiepchan.github.io/video02'">Jumpscare Videos (4)</button>
                 <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (5)</button>
                 <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (6)</button>
             </div>
