--- a/index.html
+++ b/index.html
@@ -36,9 +36,19 @@
         preventBack(); // Đảm bảo trạng thái luôn được thêm lại khi thoát trang
     };
 </script>
-    <meta charset="UTF-8">
+   
+     <!-- Thẻ robots cho phép công cụ tìm kiếm lập chỉ mục trang này -->
+  <meta name="robots" content="index, follow">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO</title>
+    <title>I LIKE YOU  .</title>
+    <meta name="description" content="ghost scare troll games, ghost scare video clips, and many interesting things about the world of ghost scares!">
+    <meta name="keywords" content="ghost scare, ghost scare game, ghost scare meme, ghost scare video, ghost scare clip, ghost scare troll, ghost scare website, ghost scare link, ghost scare game">
+    <meta name="author" content="Ghost Scare Team">
+    <meta property="og:title" content="Screenshot">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="photo">
+    <meta name="twitter:title" content="Screenshot">
     <style>
         /* Remove all margins and padding from html and body */
         html, body {
@@ -163,7 +173,7 @@
         <div class="content">
             <div class="countdown">    
                 <button class="button" >LIST JUMPSCARE VIDEOS</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (1)</button>
+                <button class="button" onclick="window.location.href='https://australiavd.github.io/sad'">Jumpscare Videos (1)</button>
                 <button class="button" onclick="window.location.href='https://tophorrortales.blogspot.com/'">Jumpscare Videos (2)</button>
                 <button class="button" onclick="window.location.href='https://vietnamvd.github.io/sad'">Jumpscare Videos (3)</button>
                 <button class="button" onclick="window.location.href='https://thatnghiepchan.github.io/video02'">Jumpscare Videos (4)</button>
