--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-        <!-- Open Graph tags cho chia sẻ trên mạng xã hội -->
-        <meta property="og:title" content="vietnamvd, australiavd">
-        <meta property="og:description" content="vietnamvd, australiavd">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://vietnamvd.github.io/">
-        
-        <link rel="canonical" href="https://vietnamvd.github.io/">
-     <!-- Mô tả trang (meta description) -->
-     <meta name="description" content="vietnamvd, . github . io, australiavd">
+    <!-- Open Graph tags for social media sharing -->
+    <meta property="og:title" content="vietnamvd, australiavd">
+    <meta property="og:description" content="vietnamvd, australiavd">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://australiavd.github.io/">
+    <link rel="canonical" href="https://australiavd.github.io/">
 
-     <!-- Từ khóa (meta keywords) -->
-     <meta name="keywords" content="australiavd , vietnamvd , YOU WILL LIKE IT">
- 
-     <!-- Thẻ robots cho phép công cụ tìm kiếm lập chỉ mục trang này -->
-     <meta name="robots" content="index, follow">
- 
+    <!-- Page description (meta description) -->
+    <meta name="description" content=" https://australiavd.github.io/sad , a website sharing information and resources related to both domains">
+
+    <!-- Keywords (meta keywords) -->
+    <meta name="keywords" content=" YOU WILL LIKE IT, https://australiavd.github.io/sad , https://australiavd.github.io">
+
+    <!-- Robots tag to allow search engines to index this page -->
+    <meta name="robots" content="index, follow">
+
+    <!-- Structured data (JSON-LD) for better SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "url": "https://vietnamvd.github.io/",
+        "name": "vietnamvd, australiavd",
+        "description": "Official website for https://australiavd.github.io/sad, sharing resources and information related to the projects."
+    }
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YOU WILL LIKE IT</title>
+
+    <!-- Redirect script -->
     <script>
         setTimeout(function() {
             window.location.href = "https://australiavd.github.io/menu";
-        }, 1000); // 2 giây
+        }, 1000); // 1 second delay
     </script>
 </head>
 <body>
-    <p>YOU WILL LIKE IT </p>
+    <p>YOU WILL LIKE IT</p>
     <h1>YOU WILL LIKE IT</h1>
     <p>!</p>
-
 </body>
 </html>
