--- a/ready.html
+++ b/ready.html
@@ -112,7 +112,7 @@
             <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',8483697,document.createElement('script'))</script>
 </head>
 <body>
-    <h1>.</h1>  
+    <h1>I will terrify you</h1>  
     <div style="height:100px;width:100px; margin-top: 300px;">
         <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
         <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div>
@@ -120,12 +120,12 @@
     <div id="overlay" class="overlay">
         <div class="overlay-body">
             <br> <br> <br> 
-            <p class="overlay-title">I WANT TO REMIND YOU</p>
-            <p>I WANT TO REMIND YOU</p>
-            <p class="overlay-description">Please note that this content is not suitable for the elderly, those with a weak heart, underlying medical conditions, or unstable mental health!</p>
+            <p class="overlay-title">I WILL TERRIFY YOU  </p>
+            <p>I WILL TERRIFY YOU</p>
+            <p class="overlay-description">I WILL TERRIFY YOU - I WILL TERRIFY YOU - I WILL TERRIFY YOU - I WILL TERRIFY YOU - I WILL TERRIFY YOU - I WILL TERRIFY YOU</p>
               <div class="overlay-buttons-wrapper">
-                <div id="accept-button" class="overlay-button"> Open </div>
-                <div id="decline-button" class="overlay-button"> Can't Resist the Curiosity</div>
+                <div id="accept-button" class="overlay-button"> I WILL TERRIFY YOU </div>
+                <div id="decline-button" class="overlay-button"> I WILL TERRIFY YOU </div>
             </div>
             <hr>
             <br>
@@ -141,7 +141,7 @@
             <script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script>
 		<br>
             <div class="report-section">
-                <p>------- I LIKE YOU ----</p>
+                <p>-------I WILL TERRIFY YOU ----</p>
                 <a href="https://australiavd.github.io/menu">HOME</a> <BR> <BR>
                 <a href="https://australiavd.github.io/menu"> SEE MORE</a>
             </div>
