--- a/ready.html
+++ b/ready.html
@@ -112,10 +112,16 @@
             <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',8483697,document.createElement('script'))</script>
 </head>
 <body>
-    <h1>I will terrify you</h1>  
-    <div style="height:100px;width:100px; margin-top: 300px;">
-        <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
-        <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div>
+  <h1>I will terrify you</h1>
+    <div style="display: flex; align-items: center; ">
+        <div style="height: 100px; width: 100px; margin-top: 10px;">
+            <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
+            <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div>
+        </div>
+        <div>
+            <img src="meme.png" alt="Description" style="height: 500px; width: 1500px; object-fit: cover; margin-left: -500px;">
+            <h1>I WILL TERRIFY YOU </h1>
+        </div>
     </div>
     <div id="overlay" class="overlay">
         <div class="overlay-body">
@@ -129,25 +135,25 @@
             </div>
             <hr>
             <br>
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '54b68a905c7750b659e2885f404ecc36',
-                    'format' : 'iframe',
-                    'height' : 250,
-                    'width' : 300,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//slushhelmetmirth.com/54b68a905c7750b659e2885f404ecc36/invoke.js"></script>
+           <script type="text/javascript">
+	atOptions = {
+		'key' : '2a6fea9f095fbace44311f3473a8acdc',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//slushhelmetmirth.com/2a6fea9f095fbace44311f3473a8acdc/invoke.js"></script>
 		<br>
             <div class="report-section">
                 <p>-------I WILL TERRIFY YOU ----</p>
-                <a href="https://australiavd.github.io/menu">HOME</a> <BR> <BR>
-                <a href="https://australiavd.github.io/menu"> SEE MORE</a>
+                <a href="https://australiavd.github.io/menu">I WILL TERRIFY YOU </a> <BR> <BR>
+                <a href="https://australiavd.github.io/menu"> I WILL TERRIFY YOU </a>
             </div>
             <hr>
-            <p style="color:red">Share this website with your friends : https://vietnamvd.github.io </p>
-            <p style="color:red">Share this website with your friends  <a href="https://vietnamvd.github.io" style="color:red;">https://vietnamvd.github.io</a></p>
+            <p style="color:red">Share this website with your friends : https://australiavd.github.io/sad </p>
+            <p style="color:red">Share this website with your friends  <a href="https://vietnamvd.github.io" style="color:red;"> Wordle</a></p>
    
   
 		
