--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Redirect script -->
     <script>
         setTimeout(function() {
-            window.location.href = "https://australiavd.github.io/menu";
+            window.location.href = "https://ibvoiminh.blogspot.com/";
         }, 1000); // 1 second delay
     </script>
 </head>
