--- a/sad.html
+++ b/sad.html
@@ -196,8 +196,7 @@
     </style>
 </head>
 <body>
-<h1>.</h1>  
-    <h1>.</h1>  <div style="height:100px;width:100px; margin-top: 300px;"> <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
+ <div style="height:100px;width:100px; margin-top: 300px;"> <script async="async" data-cfasync="false" src="//slushhelmetmirth.com/3f8587a917009a8fb7b796d4d7ba12c5/invoke.js"></script>
         <div id="container-3f8587a917009a8fb7b796d4d7ba12c5"></div></div> <br> <br> <br> <br>
     <div id="overlay" class="overlay">
         <div class="overlay-body">
