--- a/menu.html
+++ b/menu.html
@@ -174,11 +174,10 @@
             <div class="countdown">    
                 <button class="button" >LIST JUMPSCARE VIDEOS</button>
                 <button class="button" onclick="window.location.href='https://australiavd.github.io/sad'">Jumpscare Videos (1)</button>
-                <button class="button" onclick="window.location.href='https://tophorrortales.blogspot.com/'">Jumpscare Videos (2)</button>
-                <button class="button" onclick="window.location.href='https://vietnamvd.github.io/sad'">Jumpscare Videos (3)</button>
-                <button class="button" onclick="window.location.href='https://thatnghiepchan.github.io/video02'">Jumpscare Videos (4)</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (5)</button>
-                <button class="button" onclick="window.location.href='https://ibvoiminh.blogspot.com/'">Jumpscare Videos (6)</button>
+                <button class="button" onclick="window.location.href='https://zireemilsoude.net/4/8226492'">Jumpscare Videos (2)</button>
+                <button class="button" onclick="window.location.href='https://zireemilsoude.net/4/8565704'">Jumpscare Videos (3)</button>
+                <button class="button" onclick="window.location.href='https://zireemilsoude.net/4/8565705'">Jumpscare Videos (4)</button>
+                <button class="button" onclick="window.location.href='https://zireemilsoude.net/4/8565706'">Jumpscare Videos (5)</button>
             </div>
         </div>
         
