--- a/sad.html
+++ b/sad.html
@@ -237,8 +237,8 @@
             <hr>
           
             <div class="report-section">
-                <a href="https://vietnamvd.github.io/sad">HOME</a> <BR> <BR>
-                <a href="https://vietnamvd.github.io/sad"> SEE MORE</a>
+                <a href="https://australiavd.github.io/menu">HOME</a> <BR> <BR>
+                <a href="https://australiavd.github.io/menu"> SEE MORE</a>
             </div>
 
             <p style="color:red">Share this website with your friends : https://australiavd.github.io/sad </p>
